[tool.poetry]
name = "poetry-testi"
version = "0.1.0"
description = ""
authors = ["Sanni Isokirmo <sanni.isokirmo@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
cowsay = "^6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
